--- a/start/templates/start/Practice5.html
+++ b/start/templates/start/Practice5.html
@@ -22,8 +22,8 @@
   }
 </style>
 
-<h1 class="text-center mb-4">{{ settings.title }}</h1>
-<div class="lead mb-4">{{ settings.main_text|safe }}</div>
+<h1 class="text-center mb-4">{{ title }}</h1>
+<div class="lead mb-4">{{ main_text|safe }}</div>
 
 {% if settings.full_image_path %}
   <div class="text-center my-4 image-wrap">
@@ -55,3 +55,4 @@
 </form>
 
 {% endblock %}
+
