--- a/start/templates/start/CaptureProlific.html
+++ b/start/templates/start/CaptureProlific.html
@@ -1,9 +1,6 @@
 {% block title %}
-Prolific Verification
+Prolific ID Verification
 {% endblock %}
-
-{% block content %}
-<h2>Prolific ID Verification</h2>
 
 <p>
 Before continuing, please confirm your Prolific ID. This ensures that we can correctly match your responses and compensate you for participation.
