--- a/start/templates/start/CaptureProlific.html
+++ b/start/templates/start/CaptureProlific.html
@@ -13,15 +13,7 @@ Please enter your Prolific ID so we can match your participation to your submiss
 
 <form method="post">
     {% csrf_token %}
-    <div class="mb-3">
-        <label for="id_prolific_id" class="form-label">Prolific ID</label>
-        <input type="text"
-               id="id_prolific_id"
-               name="prolific_id"
-               class="form-control"
-               required>
-    </div>
-
+    {{ formfields }}
     <button class="btn btn-primary">Continue</button>
 </form>
 {% endblock %}
