--- a/start/templates/start/CaptureProlific.html
+++ b/start/templates/start/CaptureProlific.html
@@ -1,22 +1,11 @@
 {% extends "global/Page.html" %}
 
-{% block title %}
-Prolific ID
-{% endblock %}
+{% block title %}Prolific ID{% endblock %}
 
 {% block content %}
-<h2>Prolific ID</h2>
+  <p>Please enter your Prolific ID so we can match your participation to your submission.</p>
 
-<p>Please enter your Prolific ID so we can match your participation to your submission.</p>
+  {% formfield participant.prolific_id label="Prolific ID" %}
 
-<div class="mb-3">
-    <label for="id_prolific_id" class="form-label">Prolific ID</label>
-    <input type="text"
-           id="id_prolific_id"
-           name="prolific_id"
-           class="form-control"
-           required>
-</div>
-
-<button class="btn btn-primary">Continue</button>
+  {% next_button %}
 {% endblock %}
