--- a/start/templates/start/CaptureProlific.html
+++ b/start/templates/start/CaptureProlific.html
@@ -1,11 +1,8 @@
 {% extends "global/Page.html" %}
 
-{% block title %}Prolific ID{% endblock %}
+{% block title %}Starting...{% endblock %}
 
 {% block content %}
-  <p>Please enter your Prolific ID so we can match your participation to your submission.</p>
-
-  {% formfield participant.prolific_id label="Prolific ID" %}
-
+  <p>Please click Next to begin.</p>
   {% next_button %}
 {% endblock %}
