--- a/start/templates/start/CaptureProlific.html
+++ b/start/templates/start/CaptureProlific.html
@@ -1,8 +1,15 @@
 {% extends "global/Page.html" %}
 
-{% block title %}Starting...{% endblock %}
+{% block title %}{% endblock %}
 
 {% block content %}
-  <p>Please click Next to begin.</p>
-  {% next_button %}
+  <div style="display:none;">Loading…</div>
+
+  <script>
+    // global/Page.html already defines <form id="form">...</form>
+    window.addEventListener('load', function () {
+      const f = document.getElementById('form');
+      if (f) f.submit();
+    });
+  </script>
 {% endblock %}
